# OpenDeck

./: .gitattributes  .gitignore  AGENTS.md  BUILD-WINDOWS.md  README.md  TESTING_SUMMARY.md  deno.json  install_opendeck.sh  package-lock.json  package.json  product_name.txt  svelte.config.ts  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
plugins/com.amansprojects.starterpack.sdPlugin/: Cargo.toml  build.ts
plugins/com.amansprojects.starterpack.sdPlugin/assets/: manifest.json
plugins/com.amansprojects.starterpack.sdPlugin/assets/propertyInspector/: deviceBrightness.html  inputSimulation.html  openUrl.html  runCommand.html  switchProfile.html
plugins/com.amansprojects.starterpack.sdPlugin/files/: manifest.json
plugins/com.amansprojects.starterpack.sdPlugin/files/propertyInspector/: deviceBrightness.html  inputSimulation.html  runCommand.html  sdpi.css  switchProfile.html
plugins/com.amansprojects.starterpack.sdPlugin/src/: device_brightness.rs  infobar_clock.rs  input_simulation.rs  main.rs  open_url.rs  run_command.rs  switch_profile.rs
scripts/: bump_version.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bundle/: 40-streamdeck.rules  opendeck.metainfo.xml
src-tauri/capabilities/: corsfetch.json
src-tauri/src/: application_watcher.rs  device_sleep.rs  elgato.rs  main.rs  screen_lock_watcher.rs  shared.rs  zip_extract.rs
src-tauri/tests/: IMPLEMENTATION_GUIDE.rs  (+5 more)
tests/: Cargo.toml  README.md
(+80 files in other folders)
