[package]
name = "opendeck-starterpack"
version = "1.4.1"
authors = ["Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
openaction = "1.1"
log = "0.4"
simplelog = "0.12"
serde = "1.0"
serde_json = "1.0"
ron = "0.8"
enigo = { version = "0.3", features = ["serde", "x11rb"] }
tokio = { version = "1.42", features = ["full"] }
tungstenite = "0.26"
os_pipe = "1.2"
