[package]
name = "opendeck-starterpack"
authors = ["Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
openaction = "1.1"
log = "0.4"
simplelog = "0.12"
serde = "1.0"
serde_json = "1.0"
ron = "0.12"
enigo = { git = "https://github.com/enigo-rs/enigo.git", rev = "4cb8833144e6e5e679b91ae7fd53507f9abf751d", features = ["serde", "x11rb", "wayland", "libei_tokio"] }
tokio = { version = "1.48", features = ["full"] }
os_pipe = "1.2"
